[package]
name = "karyon"
version = "0.1.0"
authors = ["Arnie97 <arnie97@gmail.com>"]
edition = "2018"
description = "The tagging based semantic metadata storage"
repository = "https://github.com/fg193/karyon"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["std", "serde"], default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
simple-error = "0.2.3"
