[package]
name = "karyon"
version = "0.1.0"
authors = ["Arnie97 <arnie97@gmail.com>"]
edition = "2018"
description = "The tagging based semantic metadata storage"
repository = "https://github.com/fg193/karyon"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4.0-beta.2"
actix-web = "4.0.0-beta.8"
bb8-diesel = "0.3.0"
chrono = { version = "0.4.19", features = ["std", "serde"], default-features = false }
data-encoding = "2.3.2"
data-encoding-macro = "0.1.12"
diesel = { version = "1.4.7", features = ["chrono", "postgres"], default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[patch.crates-io]
bb8-diesel = { git = "https://github.com/dyedgreen/bb8-diesel" }
